Drafty draft draft

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -3,6 +3,7 @@ title: Machine Learning in Political Sciene
 subtitle: |
           | POLI_SCI 490
           | Winter 2026
+          | DRAFT
 format: 
   typst:
     margin:
@@ -24,17 +25,18 @@ fontsize: 12pt
 )[
 *Instructor:* Gustavo Diaz (#link("gustavo.diaz@northwestern.edu")) \
 *Class:* Thursdays 2:00 -- 4:50pm, Scott Hall 212 \
+*Canvas:* TBD \
 *Meetings:* Schedule appointment (#link("https://cal.com/gustavodiaz/")[cal.com/gustavodiaz/]) \
 *Office:* Scott Hall 103
 ]
 ```
 
 <!-- **GitHub Repository:** [github.com/gustavo-diaz/ps403](https://github.com/gustavo-diaz/ps490ml)   -->
-<!-- **Canvas:** [canvas.northwestern.edu/courses/235851](https://canvas.northwestern.edu/courses/235851) -->
+
 
 # Overview
 
-This course serves as a graduate-level introduction to statistical/machine learning. It will cover common techniques to process and analyze large, often structured, data. The primary emphasis will be on methods for supervised learning, parametric methods, non-parametric methods, tree-based methods, neural networks, and ensembles. We will then briefly cover techniques for unsupervised learning, such as clustering and topic models. We will conclude with a discussion of machine learning methods for statistical inference and extensions based on classroom interest.
+This course serves as a graduate-level introduction to statistical/machine learning. It will cover common techniques to process and analyze large, often unstructured, data. The primary emphasis will be on methods for supervised learning, like parametric methods, non-parametric methods, tree-based methods, neural networks, and ensembles. We will then briefly cover techniques for unsupervised learning, such as clustering and topic models. We will conclude with a discussion of machine learning methods for statistical inference and extensions based on classroom interest.
 
 # Content
 
@@ -43,7 +45,7 @@ This course serves as a graduate-level introduction to statistical/machine learn
 ```
 
 
-| **Week** | **Dates** | **Topic** |
+| **Week** | **Date** | **Topic** |
 |--: | :----- | :------------- |
 | 1 | January 8 | [Introduction](#w1) |
 | 2 | January 15 | [Regression](#w2)
@@ -64,21 +66,19 @@ This course serves as a graduate-level introduction to statistical/machine learn
 
 # Learning Objectives
 
-The goal of statistical/machine learning is prediction and description, especially in the context of large, perhaps unstructured, data sets.
+The goal of statistical/machine learning is prediction, especially in the context of large, sometimes unlabeled or unstructured, data sets.
 
 By the end of the course, you will be able to:
 
-1. Choose and apply algorithms to data relevant to your research interests
+1. Choose and apply algorithms to data relevant to your research or professional interests
 2. Evaluate the appropriateness of machine learning applications in academia, government, industry, and civil society
 3. Continue learning about cutting-edge developments in the field on your own
 
 # Prerequisites
 
-Formally, students should have taken POLI_SCI 403 (Probability and Statistics), POLI_SCI 405 (Linear Models), or equivalent familiarity with these topics and their application in statistical software like `R`, `Python`, or `Julia`. Students who do not meet these requirements should seek express approval from the instructor to take this class.
+Formally, students should have taken POLI_SCI 405 (Linear Models) or have equivalent familiarity with regresion models for statistical inference and their application in `R`, `Python`, or `Julia`. Students who do not meet these requirements should seek express approval from the instructor to take this class.
 
-Informally, I expect willingness to learn new, complex material in a semi-supervised manner.^[The joke here is that semi-supervised learning exists but it is a bit of a misnomer.] Given the breadth of the topics covered in this class, instruction cannot go much further than a mere introduction, so it is up to students to delve deeper on topics relevant to their respective research interests.
-
-The usual norms of a graduate seminar also apply. You should participate actively, productively, and respectfully in our meetings. We are jointly responsible for creating an environment conducive to learning and discovery.
+Informally, I expect willingness to learn new, complex material in a semi-supervised manner.^[The joke here is that semi-supervised learning exists but it is a bit of a misnomer.] Given the breadth of the topics covered in this class, instruction cannot go beyond introduction, so it is up to students to delve deeper on topics relevant to their respective research interests.
 
 # Requirements
 
@@ -96,40 +96,76 @@ There is no single required textbook, but we will draw heavily from:
 - **TM**: Kuhn, Max and Julia Silge. 2023. [*Tidy Modeling with R*](https://www.tmwr.org). O'Reilly
 :::
 
-The initials at the beginning denote how we will refer to each book throughout the course materials. These are all textbooks that are **FREE** to read or download online. ISL has editions with code in `R` and `Python`, the content is the same otherwise, you should choose whichever suits your goals.
+The initials at the beginning denote how we will refer to each book throughout the course materials. These are all **FREE** to read or download online. ISL has editions with code in `R` and `Python`, the content is the same otherwise, you should choose whichever suits your goals.
 
-Additional readings will be linked in the Schedule section below and are usually available through Northwestern library subscriptions.
+Additional readings will be linked in the Schedule section below, usually available through Northwestern library subscriptions.
 
 
 ## Computing
 
-We will use [R](https://www.r-project.org/) and [RStudio](https://posit.co/downloads/) to work on assignments and classroom demonstrations.  The advantage of R is that it is free and open source, meaning that you will be able to apply everything you learn in this course anywhere else. The disadvantage is a somewhat steep learning curve. I believe the investment is worthwhile for anyone working with data or in data-adjacent careers. You are welcome to use different software for statistical computing, but I cannot guarantee I will be able to help with troubleshooting.
+Instruction will use primarily [`R`](https://www.r-project.org/) and [`RStudio`](https://posit.co/downloads/), with some nods to `Python` where appropriate.
 
-You can install R and RStudio on your personal computer, which is the preferred use case. You can use [this link](https://sites.northwestern.edu/researchcomputing/resources/r-and-rstudio/) for installation instructions on Windows and MacOS. See [this link](https://levente.littvay.hu/chromebook/) for installation instructions on Chromebooks, which is a bit more involved.
-
-<!-- Could we one day have a posit cloud server? -->
-You can also use [Posit Cloud](https://posit.cloud/) to access RStudio from any web browser. A free account should suffice for the purposes of this course and has the advantage of letting you access your work across devices.
-
-If you ever need more computing resources than what a personal computer or a free Posit Cloud account allow, you should consider requesting access to the [Quest Analytic Nodes](https://www.it.northwestern.edu/departments/it-services-support/research/computing/quest/quest-analytics-nodes.html) from Northwestern IT. I do not anticipate this to be relevant for this course, but it may be useful in the future.
+The expectation is that students will come to the first day of class with a fresh local installation of `R` and `RStudio` (or their preferred software). Please reach out to the instructor if you need assistance on this front.
 
 
 # Evaluation
 
 Your final grade in this course will depend on the following:
 
+1. Participation
+
+2. Explorations (3)
+
+3. Collaborative note taking contributions (number TBD on enrollment)
+
+4. Final project: Data and methods paper
+
 
 ## Participation
 
-This course does not formally require attendance, but I do expect the usual level of accountability required in a graduate seminar. That means attending class, doing the reading, asking questions, and working to foster a productive learning environment for everyone. Your participation inside and outside the classroom will be marked as satisfactory or unsatisfactory by the end of the quarter. If your participation leans toward an unsatisfactory mark, I will notify you by the end of Week 6 and give you feedback on how to improve.
+This course does not formally require attendance, but I do expect the usual level of accountability required in a graduate seminar. That means attending class, doing the reading, asking questions, and working to foster a productive learning environment for everyone. 
 
-## Exploration assignments
+Your participation inside and outside the classroom will be marked as satisfactory or unsatisfactory by the end of the quarter. If your participation leans toward an unsatisfactory mark, I will notify you by the end of Week 6 and give you feedback on how to improve.
+
+## Explorations
+
+You will complete three exploration assignments. These are open-ended coding assignments in which you seek to accomplish two goals:
+
+1. Teach yourself a new method or tool relevant to your research
+2. Progress on your final paper
+
+Ideally, you would start working on a data set or topic that aligns with your final paper, but this is not a firm requirement.
+
+Explorations should be submitted as PDF files on Canvas and are due at 11:59PM on the following dates:
+
+- Tuesday, January 27
+- Tuesday, February 10
+- Tuesday, March 3
+
+Each exploration will be marked as satisfactory, unsatisfactory, or failed. You can redo any exploration marked as unsatisfactory, to which I will give detailed feedback, before the final paper deadline.
+
+We will devote some of our class meeting time over the course of the quarter to discuss exploration topics.
 
 
+## Class notes
 
+Every week, a number of students (based on enrollment) will serve as note-taking leaders. Note taking leaders will prepare summaries, discussion, and talking points for the assigned material for the week and incorporate them in a collaborative document (format TBD).
 
-## Data paper
+I will randomly assign topics during at the beginning of the quarter. Students are welcome to trade their turns as long as they notify the instructor at least one week ahead.
 
+Notes will be marked as satisfactory, unsatisfactory, or failed. Unsatisfactory marks can be resubmitted at any point before the final paper deadline. Notes are due on Tuesdays at 11:59PM **before** the corresponding class meeting.
 
+## Data and methods paper
+
+As a final project, you will write a data and methods paper. This will take the form of a research note in which you use the methods and tools covered in class to "solve" a methodological issue in your own research. The ideal project would advance an aspect of your dissertation. For example, you may write a paper about choosing the best possible classification method to code a variable from unstructured data, or use machine learning methods to estimate heterogeneous treatment effects in an original experiment. 
+
+You are required to schedule a meeting with me to discuss the topic of your replication paper. If we do not meet to discuss your paper at least once, your paper will be marked as failed. 
+
+Collaboration with people inside or outside the class is allowed with instructor approval.
+
+Final papers are due on TBD at 9AM. You should submit your paper in PDF format through Canvas. Your paper should follow the format of a research note, up to 4,000 words. You are also required to submit a link to a GitHub repository (or equivalent) including all the code used to reproduce your tables, figures, and calculations. You may also include less important details in the appendix to keep the paper concise. You can read more about research notes in political science [here](https://resulumit.com/blog/polisci-research-notes/).
+
+Your final paper will be marked as *outstanding*, *satisfactory*, *unsatisfactory*, or *failed*. You are also welcome to resubmit a final paper marked as unsatisfactory at any point, but that means I will not be able to update your grade until after the final grade report deadline. I encourage submitting an incomplete paper over asking for an incomplete course grade.
 
 # Grading
 
@@ -137,22 +173,30 @@ This course uses a labor-based grading agreement, commonly known as contract gra
 
 You will get a default grade if you meet the contract. It will go lower if you miss parts of the contract, it will go higher if you meet the baseline plus other criteria.
 
-To meet the baseline grading contract (B+), you should:
+To meet the baseline grading contract (A-), you should:
+
+- Be late (by a maximum of 24 hours) on no more than one assignment
+
+- Submit the final paper before the deadline
+
+- Have a satisfactory participation status by the end of the semester
+
+- Complete three explorations with a satisfactory mark
+
+- Contribute satisfactorily to the class notes every time it is your turn
+
+- Receive a satisfactory or outstanding mark in the final paper
 
 
+To get an A, you should complete the requirements listed above and also receive an outstanding mark in the final paper.
 
+Your grade will decrease if you miss work. Unless otherwise agreed upon in writing on a case-by-case basis, the following criteria outlines how deviating from the baseline contract will impact your grade (assuming everything else constant):
 
-To get an A-, you should...
-
-To get an A, you should...
-
-Your grade will go below a B+ if you miss work. Unless otherwise agreed upon in writing on a case-by-case basis, the following criteria outlines how deviating from the baseline contract will impact your grade (assuming everything else constant):
-
-[HERE]
+- Participation marked as unsatisfactory: One letter grade deduction (e.g. from A- to B-)
+- Exploration or note-taking marked as unsatisfactory or failed: Half letter grade deduction each (e.g. from A to A-)
+- Final paper marked as failed: F
 
 If many of the criteria for missed work apply, you will get the lowest grade applicable.
-
-By signing up for this course, you accept the terms of the grading contract. We will discuss potential amendments in Week 1. Amendments to the grading contract beyond this point should be agreed upon unanimously by students and the instructional team.
 
 # Northwestern University Syllabus Standards
 
