--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -3,7 +3,6 @@ title: Machine Learning in Political Sciene
 subtitle: |
           | POLI_SCI 490
           | Winter 2026
-          | DRAFT
 format: 
   typst:
     margin:
@@ -14,6 +13,7 @@ fontsize: 12pt
 
 ```{=typst} 
 #show link: set text(blue)
+
 ```
 
 ```{=typst}
@@ -89,11 +89,13 @@ There is no single required textbook, but we will draw heavily from:
 ::: {.callout-note}
 ## **Textbooks**
 
-- **ESL:** Hastie, Trevor, Robert Tibshirani, and Jerome Friedman. 2017. [*The Elements of Statistical Learning*](https://www.statlearning.com). Springer
+- **ESL:** Hastie, Trevor, Robert Tibshirani, and Jerome Friedman. 2017. [*The Elements of Statistical Learning*](https://hastie.su.domains/ElemStatLearn/). Springer
 
 - **ISL:** James, Gareth, Daniela Witten, Trevor Hastie, and Robert Tibshirani. 2021/2023. [*An Introduction to Statistical Learning*](https://www.statlearning.com). Springer
 
 - **TM**: Kuhn, Max and Julia Silge. 2023. [*Tidy Modeling with R*](https://www.tmwr.org). O'Reilly
+
+<!-- Also: https://workshops.tidymodels.org -->
 :::
 
 The initials at the beginning denote how we will refer to each book throughout the course materials. These are all **FREE** to read or download online. ISL has editions with code in `R` and `Python`, the content is the same otherwise, you should choose whichever suits your goals.
@@ -220,21 +222,88 @@ Copilot is the [University’s supported artificial intelligence service](https:
 
 ## Week 1 (January 8): Introduction {#w1}
 
+@. TM Chapters 1-3
+
+@. Breiman, Leo. 2001. ["Statistical Modeling: The Two Cultures with comments and a rejoinder by the author)."](https://doi.org/10.1214/ss/1009213726) *Statistical Science* 16 (3): 199-231
+
+@. Daoud, Adel and Devdatt Dubhashi. 2020. ["Statistical modeling: the three cultures."](https://doi.org/10.48550/arXiv.2012.04570)
+
+
+
 ## Week 2 (January 15): Regression {#w2}
+
+@. ISL Chapters 2-3
+
+@. ESL Chapters 2-3.2
+
+@. TM Chapters 4-8
 
 ## Week 3 (January 22): Classification {#w3}
 
+@. ISL Chapters 4, 9
+
+@. ESL Chapter 4, 12, 13
+
+
 ## Week 4 (January 29): Validation, selection, shrinkage, regularization {#w4}
+
+@. ISL Chapters 5-6
+
+@. ESL Chapter 3.3-3.9, 7
+
+@. TM Chapters 9-15
+
+@. Hossin, M. and M.N. Sulaiman. 2015. ["A Review on Evaluation Metrics for Data Classification Evaluations."](https://doi.org/10.5121/ijdkp.2015.5201) *Journal of Data Mining & Knowledge Management Process* 5 (2)
 
 ## Week 5 (February 5): Tree-based methods {#w5}
 
+@. ISL Chapter 8
+
+@. ESL Chapters 9-10, 15
+
+@. Montgomery, Jacob M. and Santiago Olivella. 2018. ["Tree-Based Models for Political Science Data."](https://doi.org/10.1111/ajps.12361) *American Journal of Political Science* 62 (3): 729-744
+
+https://doi.org/10.1017/pan.2018.59
+
 ## Week 6 (February 12): Neural networks {#w6}
+
+@. ISL Chapter 10
+
+@. ESL Chapter 11
+
+https://doi.org/10.1017/pan.2021.9
 
 ## Week 7 (February 19): Ensemble learning {#w7}
 
+@. ESL Chapter 16
+
 ## Week 8 (February 26): Unsupervised learning {#w8}
 
+@. ISL Chapter 12
+
+@. ESL Chapter 14
+
+@. Torres, Michelle. 2024. ["A Framework for the Unsupervised and Semi-Supervised Analysis of Visual Frames."](https://doi.org/10.1017/pan.2023.32) *Political Analysis* 32 (2): 199-220
+
 ## Week 9 (March 5): Inference {#w9}
+
+@. Fuller, Sam and Jack T. Rametta. 2024. ["Causal Forest and Double Robust Machine Learning for Political Science."](https://doi.org/10.31219/osf.io/nm9de_v3)
+
+
+@. Wager, Stefan, and Susan Athey. 2018. ["Estimation and Inference of Heterogenous Treatment Effects Using Random Forests."](https://doi.org/10.1080/01621459.2017.1319839) *Journal of the American Statistical Association* 113 (523): 1228-1242
+
+
+@. Chernozhukov, Victor et al. 2018. ["Double/debiased machine learning for treatment and structural parameters."](https://doi.org/10.1111/ectj.12097) *The Econometrics Journal* 21 (1): C1-C68
+
+@. Ratkovic, Marc. 2023. ["Relaxing Assumptions, Improving Inference: Integrating Machine Learning and the Linear Regression."](https://doi.org/10.1017/S0003055422001022). *American Political Science Review* 117 (3): 1053-1069
+
+    - [Video version](https://youtu.be/IXb1B-aT23c?si=1rAZRmgj7Eb-DwB5)
+    
+@. Egami, Naoki, Musashi Hinck, Brandon M. Steward, and Hanying Wei. 2024. ["Using Large Language Model Annotations for the Social Sciences: A General Framework of Using Predicted Variables in Downstream Analyses."](https://naokiegami.com/paper/dsl_ss.pdf)
+
+@. Morucci, Marco and Arthur Spirling. 2024. ["Model Complexity for Supervised Learning: Why Simple Models Almost Always Work Best, And Why It Matters for Applied Research."](https://arthurspirling.org/documents/MorucciSpirling_JustDoOLS.pdf)
+    
+https://doi.org/10.1093/pan/mpt019
 
 ## Week 10 (March 12): Extensions/make-up class {#w10}
 
