--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -36,7 +36,7 @@ fontsize: 12pt
 
 # Overview
 
-This course serves as a graduate-level introduction to statistical/machine learning. It will cover common techniques to process and analyze large, often unstructured, data. The primary emphasis will be on methods for supervised learning, like parametric methods, non-parametric methods, tree-based methods, neural networks, and ensembles. We will then briefly cover techniques for unsupervised learning, such as clustering and topic models. We will conclude with a discussion of machine learning methods for statistical inference and extensions based on classroom interest.
+This course serves as a graduate-level introduction to statistical/machine learning. It will cover common techniques to process and analyze large, often unstructured, data. The primary emphasis will be on methods for supervised learning, including parametric methods, non-parametric methods, tree-based methods, neural networks, and ensembles. We will then briefly cover techniques for unsupervised learning, such as clustering and topic models. We will conclude with a discussion of machine learning methods for statistical inference and extensions based on classroom interest.
 
 # Content
 
@@ -50,7 +50,7 @@ This course serves as a graduate-level introduction to statistical/machine learn
 | 1 | January 8 | [Introduction](#w1) |
 | 2 | January 15 | [Regression](#w2)
 | 3 | January 22 | [Classification](#w3)
-| 4 | January 29 | [Validation, selection, shrinkage, regularization](#w4)
+| 4 | January 29 | [Validation, selection, regularization](#w4)
 | 5 | February 5 | [Tree-based methods](#w5)
 | 6 | February 12 | [Neural networks](#w6)
 | 7 | February 19 | [Ensemble learning](#w7)
@@ -72,11 +72,11 @@ By the end of the course, you will be able to:
 
 1. Choose and apply algorithms to data relevant to your research or professional interests
 2. Evaluate the appropriateness of machine learning applications in academia, government, industry, and civil society
-3. Continue learning about cutting-edge developments in the field on your own
+3. Continue learning about cutting-edge developments in your own field
 
 # Prerequisites
 
-Formally, students should have taken POLI_SCI 405 (Linear Models) or have equivalent familiarity with regresion models for statistical inference and their application in `R`, `Python`, or `Julia`. Students who do not meet these requirements should seek express approval from the instructor to take this class.
+Formally, students should have taken POLI_SCI 405 (Linear Models) or have equivalent familiarity with regresion models for statistical inference and their application in `R`, `Python`, or `Julia`. Students who do not meet these requirements should seek express approval from the instructor to take this course.
 
 Informally, I expect willingness to learn new, complex material in a semi-supervised manner.^[The joke here is that semi-supervised learning exists but it is a bit of a misnomer.] Given the breadth of the topics covered in this class, instruction cannot go beyond introduction, so it is up to students to delve deeper on topics relevant to their respective research interests.
 
@@ -92,15 +92,24 @@ There is no single required textbook, but we will draw heavily from:
 - **ESL:** Hastie, Trevor, Robert Tibshirani, and Jerome Friedman. 2017. [*The Elements of Statistical Learning*](https://hastie.su.domains/ElemStatLearn/). Springer
 
 - **ISL:** James, Gareth, Daniela Witten, Trevor Hastie, and Robert Tibshirani. 2021/2023. [*An Introduction to Statistical Learning*](https://www.statlearning.com). Springer
-
-- **TM**: Kuhn, Max and Julia Silge. 2023. [*Tidy Modeling with R*](https://www.tmwr.org). O'Reilly
-
-<!-- Also: https://workshops.tidymodels.org -->
 :::
 
 The initials at the beginning denote how we will refer to each book throughout the course materials. These are all **FREE** to read or download online. ISL has editions with code in `R` and `Python`, the content is the same otherwise, you should choose whichever suits your goals.
 
 Additional readings will be linked in the Schedule section below, usually available through Northwestern library subscriptions.
+
+While not part of the required reading, the following books are  recommended as a resource to implement machine learning workflows in `R` and `Python`:
+
+::: {.callout-note}
+## **Recommended**
+
+- Kuhn, Max and Julia Silge. 2023. [*Tidy Modeling with R*](https://www.tmwr.org). O'Reilly
+
+<!-- Also: https://workshops.tidymodels.org -->
+
+- Raschka, Sebastian, Yuxi (Hayden) Liu, and Vahid Mirjalili. [*Machine Learning with PyTorch and Scikit-Learn*](https://dl.ebooksworld.ir/books/Machine.Learning.with.PyTorch.and.Scikit-Learn.Sebastian.Raschka.Packt.9781801819312.EBooksWorld.ir.pdf). Packt Publising
+
+:::
 
 
 ## Computing
@@ -165,7 +174,7 @@ You are required to schedule a meeting with me to discuss the topic of your repl
 
 Collaboration with people inside or outside the class is allowed with instructor approval.
 
-Final papers are due on TBD at 9AM. You should submit your paper in PDF format through Canvas. Your paper should follow the format of a research note, up to 4,000 words. You are also required to submit a link to a GitHub repository (or equivalent) including all the code used to reproduce your tables, figures, and calculations. You may also include less important details in the appendix to keep the paper concise. You can read more about research notes in political science [here](https://resulumit.com/blog/polisci-research-notes/).
+Final papers are due on TBD at 9AM. You should submit your paper in PDF format through Canvas. Your paper should follow the format of a research note, up to 4,000 words. You are also required to submit a link to a GitHub or Code Ocean repository (or equivalent) including all the code used to reproduce your tables, figures, and calculations. You may also include less important details in the appendix to keep the paper concise. You can read more about research notes in political science [here](https://resulumit.com/blog/polisci-research-notes/).
 
 Your final paper will be marked as *outstanding*, *satisfactory*, *unsatisfactory*, or *failed*. You are also welcome to resubmit a final paper marked as unsatisfactory at any point, but that means I will not be able to update your grade until after the final grade report deadline. I encourage submitting an incomplete paper over asking for an incomplete course grade.
 
@@ -204,11 +213,6 @@ If many of the criteria for missed work apply, you will get the lowest grade app
 
 This course follows the [Northwestern University Syllabus Standards](https://www.registrar.northwestern.edu/registration-graduation/northwestern-university-syllabus-standards.html). Students are responsible for familiarizing themselves with this information.
 
-# Use of Generative AI Systems
-
-The use of generative artificial intelligence in this course is encouraged as long as it is used to amplify humans instead of replacing them. Any form of cheating, including improper use of content generated by artificial intelligence, constitutes a violation of Northwestern’s academic integrity policy.
-
-Copilot is the [University’s supported artificial intelligence service](https://www.it.northwestern.edu/about/news-events/2024/microsoft-copilot-available-university-community.html). When using Copilot while actively logged in with a Northwestern account, data is stored securely in Northwestern’s Microsoft tenant, and Microsoft will not use it for product improvement or to train its AI models. 
 
 {{< pagebreak >}}
 
@@ -222,21 +226,22 @@ Copilot is the [University’s supported artificial intelligence service](https:
 
 ## Week 1 (January 8): Introduction {#w1}
 
-@. TM Chapters 1-3
+<!-- - TM Chapters 1-3 -->
 
-@. Breiman, Leo. 2001. ["Statistical Modeling: The Two Cultures with comments and a rejoinder by the author)."](https://doi.org/10.1214/ss/1009213726) *Statistical Science* 16 (3): 199-231
+@. Breiman, Leo. 2001. ["Statistical Modeling: The Two Cultures (with comments and a rejoinder by the author)."](https://doi.org/10.1214/ss/1009213726) *Statistical Science* 16 (3): 199-231
 
 @. Daoud, Adel and Devdatt Dubhashi. 2020. ["Statistical modeling: the three cultures."](https://doi.org/10.48550/arXiv.2012.04570)
 
-
-
 ## Week 2 (January 15): Regression {#w2}
+
 
 @. ISL Chapters 2-3
 
 @. ESL Chapters 2-3.2
 
-@. TM Chapters 4-8
+<!-- @. TM Chapters 4-8 -->
+
+@. Morucci, Marco and Arthur Spirling. 2024. ["Model Complexity for Supervised Learning: Why Simple Models Almost Always Work Best, And Why It Matters for Applied Research."](https://arthurspirling.org/documents/MorucciSpirling_JustDoOLS.pdf)
 
 ## Week 3 (January 22): Classification {#w3}
 
@@ -244,16 +249,29 @@ Copilot is the [University’s supported artificial intelligence service](https:
 
 @. ESL Chapter 4, 12, 13
 
+@. Gründler, Klaus and Tommy Krieger. 2016. ["Democracy and growth: Evidence from a machine learning indicator."](https://doi.org/10.1016/j.ejpoleco.2016.05.005) *European Journal of Political Economy* 45 (Supplement): 85-107
 
-## Week 4 (January 29): Validation, selection, shrinkage, regularization {#w4}
+@. Cantú, Francisco and Sebastián M. Saiegh. 2011. ["Fraudulent Democracy? An Analysis of Argentina's *Infamous Decade* Using Supervised Machine Learning."](https://doi.org/10.1093/pan/mpr033) *Political Analysis* 19 (4): 409-433
+
+@. Peterson, Andrew and Arthur Spirling. ["Classification Accuracy as a Substantive Quantity of Interest: Measuring Polarization in Westminster Systems"](https://doi.org/10.1017/pan.2017.39) *Political Analysis* 26 (1): 120-128
+
+  
+## Week 4 (January 29): Validation, selection, regularization {#w4}
 
 @. ISL Chapters 5-6
 
 @. ESL Chapter 3.3-3.9, 7
 
-@. TM Chapters 9-15
+<!-- @. TM Chapters 9-15 -->
 
-@. Hossin, M. and M.N. Sulaiman. 2015. ["A Review on Evaluation Metrics for Data Classification Evaluations."](https://doi.org/10.5121/ijdkp.2015.5201) *Journal of Data Mining & Knowledge Management Process* 5 (2)
+@. Rainio, Oona, Jarmo Teuho, and Riku Klén. 2024. ["Evaluation metrics and statistical tests for machine learning."](https://doi.org/10.1038/s41598-024-56706-x) *Scientific Reports* 14: 6086
+
+@. Arnold, Christian, Luka Biedebach, Andreas Küpfer, and Marcel Neunhoeffer. 2024. ["The role of hyperparameters in machine learning models and how to tune them."](https://doi.org/10.1017/psrm.2023.61) *Political Science Research and Methods* 12 (4): 841-848
+
+@. Barberá, Pablo, Amber E. Boydstun, Suzanna Linn, Ryan McMahon, and Jonathan Nagler. 2021. ["Automated Text Classification of News Articles: A Practical Guide."](https://doi.org/10.1017/pan.2020.8)
+
+@. Beltrán, Javier, Aina Gallego, Alba Huidobro, Enrique Romero, and LLuís Padró. 2021. ["Male and female politicians on Twitter: A machine learning approach."](https://doi.org/10.1111/1475-6765.12392) *European Journal of Political Research* 60 (1): 239-251
+
 
 ## Week 5 (February 5): Tree-based methods {#w5}
 
@@ -263,7 +281,9 @@ Copilot is the [University’s supported artificial intelligence service](https:
 
 @. Montgomery, Jacob M. and Santiago Olivella. 2018. ["Tree-Based Models for Political Science Data."](https://doi.org/10.1111/ajps.12361) *American Journal of Political Science* 62 (3): 729-744
 
-https://doi.org/10.1017/pan.2018.59
+@. Ash, Elliott, Sergio Galletta, and Tommaso Giommoni. 2025. ["A Machine Learning Approach to Analyze and Support Anticorruption Policy."](https://www.aeaweb.org/articles?id=10.1257/pol.20210618) *American Economic Journal: Economic Policy* 17 (2): 162-93  
+
+
 
 ## Week 6 (February 12): Neural networks {#w6}
 
@@ -271,11 +291,35 @@ https://doi.org/10.1017/pan.2018.59
 
 @. ESL Chapter 11
 
-https://doi.org/10.1017/pan.2021.9
+@. Torres, Michelle and Francisco Cantú. 2022. ["Learning to See: Convolutional Neural Networks for the Analysis of Social Science Data."](https://doi.org/10.1017/pan.2021.9) *Political Analysis* 30 (1): 113-131
 
-## Week 7 (February 19): Ensemble learning {#w7}
+@. Webb-Williams, Nora, Andreu Casas, and John D. Wilkerson. 2020. [*Images as Data for Social Science Research: An Introduction to Convolutional Neural Nets for Image Classification.*](https://doi.org/10.1017/9781108860741) Cambridge University Press
 
-@. ESL Chapter 16
+<!-- https://doi.org/10.1017/9781108960885 -->
+
+<!-- https://doi.org/10.1177/20531680231216183 -->
+
+
+
+## Week 7 (February 19): Ensembles {#w7}
+
+@. ESL Chapter 10, 16
+
+@. van der Laan, Mark J., Eric C. Polley, and Alan E. Hubbard. 2007. ["Super Learner."](https://doi.org/10.2202/1544-6115.1309) *Statistical Applications in Genetics and Molecular Biology* 6 (1): 25
+
+@. Opitz, David and Richard Maclin. 1999. ["Popular Ensemble Methods: An Empirical Study."](https://doi.org/10.1613/jair.614) *Journal of Artificial Intelligence Research* 11: 169-198
+
+@. Montgomery, Jacob M., Florian M. Hollenbach, Michael D. Ward. 2012. ["Improving Predictions using Ensemble Bayesian Model Averaging."](https://doi.org/10.1093/pan/mps002) *Political Analysis* 20 (3): 271-291
+
+@. Kaufman, Aaron Rusell, Peter Kraft, and Maya Sen. 2019. ["Improving Supreme Court Forecasting Using Boosted Decision Trees."](https://doi.org/10.1017/pan.2018.59) *Political Analysis* 27 (3): 381-387
+
+@. Hare, Christopher and Mikayla Kutsuris. 2023. ["Measuring Swing Voters with a Supervised Machine Learning Ensemble."](https://doi.org/10.1017/pan.2022.24) *Political Analysis* 31 (4): 537-553
+
+<!-- https://doi.org/10.1017/pan.2019.43 -->
+
+<!-- https://doi.org/10.1017/pan.2017.15 -->
+
+
 
 ## Week 8 (February 26): Unsupervised learning {#w8}
 
@@ -283,28 +327,45 @@ https://doi.org/10.1017/pan.2021.9
 
 @. ESL Chapter 14
 
+@. Ahlquist, John S. and Christian Breunig. 2012. ["Model-based Clustering and Typologies in the Social Sciences."](https://doi.org/10.1093/pan/mpr039) *Political Analysis* 20 (1): 92-112
+
+@. Lucas, Christopher et al. 2015. ["Computer-Assisted Text Analysis for Comparative Politics."](https://doi.org/10.1093/pan/mpu019) *Political Analysis* 23 (2): 254-277
+
+@. Roberts, Margaret E. et al. 2014. ["Structural Topic Models for Open-Ended Survey Responses."](https://doi.org/10.1111/ajps.12103) *American Journal of Political Science* 58 (4): 1064-1082
+
 @. Torres, Michelle. 2024. ["A Framework for the Unsupervised and Semi-Supervised Analysis of Visual Frames."](https://doi.org/10.1017/pan.2023.32) *Political Analysis* 32 (2): 199-220
+
+    - [Video version](https://youtu.be/Ms5X9f1ZpWw?si=7YAKwKS9P2yONRni)
+
+
 
 ## Week 9 (March 5): Inference {#w9}
 
 @. Fuller, Sam and Jack T. Rametta. 2024. ["Causal Forest and Double Robust Machine Learning for Political Science."](https://doi.org/10.31219/osf.io/nm9de_v3)
 
 
-@. Wager, Stefan, and Susan Athey. 2018. ["Estimation and Inference of Heterogenous Treatment Effects Using Random Forests."](https://doi.org/10.1080/01621459.2017.1319839) *Journal of the American Statistical Association* 113 (523): 1228-1242
+<!-- @. Wager, Stefan, and Susan Athey. 2018. ["Estimation and Inference of Heterogenous Treatment Effects Using Random Forests."](https://doi.org/10.1080/01621459.2017.1319839) *Journal of the American Statistical Association* 113 (523): 1228-1242 -->
 
 
-@. Chernozhukov, Victor et al. 2018. ["Double/debiased machine learning for treatment and structural parameters."](https://doi.org/10.1111/ectj.12097) *The Econometrics Journal* 21 (1): C1-C68
+<!-- @. Chernozhukov, Victor et al. 2018. ["Double/debiased machine learning for treatment and structural parameters."](https://doi.org/10.1111/ectj.12097) *The Econometrics Journal* 21 (1): C1-C68 -->
 
 @. Ratkovic, Marc. 2023. ["Relaxing Assumptions, Improving Inference: Integrating Machine Learning and the Linear Regression."](https://doi.org/10.1017/S0003055422001022). *American Political Science Review* 117 (3): 1053-1069
 
     - [Video version](https://youtu.be/IXb1B-aT23c?si=1rAZRmgj7Eb-DwB5)
     
-@. Egami, Naoki, Musashi Hinck, Brandon M. Steward, and Hanying Wei. 2024. ["Using Large Language Model Annotations for the Social Sciences: A General Framework of Using Predicted Variables in Downstream Analyses."](https://naokiegami.com/paper/dsl_ss.pdf)
+@. Hainmueller, Jens and Chad Hazlett. 2014. ["Kernel Regularized Least Squares: Reducing Misspecification Bias with a Flexible and Interpretable Machine Learning Approach."](https://doi.org/10.1093/pan/mpt019) *Political Analysis* 22 (2): 143-168
 
-@. Morucci, Marco and Arthur Spirling. 2024. ["Model Complexity for Supervised Learning: Why Simple Models Almost Always Work Best, And Why It Matters for Applied Research."](https://arthurspirling.org/documents/MorucciSpirling_JustDoOLS.pdf)
-    
-https://doi.org/10.1093/pan/mpt019
+<!-- Follow up:  -->
+<!-- @. Chang, Qing and Max Goplerud. 2024. ["Generalized Kernel Regularized Least Squares."](https://doi.org/10.1017/pan.2023.27) *Political Analysis* 32 (2): 157-171 -->
+
+@. Egami, Naoki, Musashi Hinck, Brandon M. Steward, and Hanying Wei. 2024. ["Using Large Language Model Annotations for the Social Sciences: A General Framework of Using Predicted Variables in Downstream Analyses."](https://naokiegami.com/paper/dsl_ss.pdf)
 
 ## Week 10 (March 12): Extensions/make-up class {#w10}
 
 No new material since it is WCAS reading week
+
+# Use of Generative AI Systems
+
+The use of generative artificial intelligence in this course is encouraged as long as it is used to amplify humans instead of replacing them. Any form of cheating, including improper use of content generated by artificial intelligence, constitutes a violation of Northwestern’s academic integrity policy.
+
+Copilot is the [University’s supported artificial intelligence service](https://www.it.northwestern.edu/about/news-events/2024/microsoft-copilot-available-university-community.html). When using Copilot while actively logged in with a Northwestern account, data is stored securely in Northwestern’s Microsoft tenant, and Microsoft will not use it for product improvement or to train its AI models. 
