--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -89,7 +89,7 @@ There is no single required textbook, but we will draw heavily from:
 ::: {.callout-note}
 ## **Textbooks**
 
-- **ESL:** Hastie, Trevor, Robert Tibshirani, and Jerome Friedman. 2017. [*The Elements of Statistical Learning*](https://hastie.su.domains/ElemStatLearn/). Springer
+- **ESL:** Hastie, Trevor, Robert Tibshirani, and Jerome Friedman. 2017. [*The Elements of Statistical Learning*](https://www.sas.upenn.edu/~fdiebold/NoHesitations/BookAdvanced.pdf). Springer
 
 - **ISL:** James, Gareth, Daniela Witten, Trevor Hastie, and Robert Tibshirani. 2021/2023. [*An Introduction to Statistical Learning*](https://www.statlearning.com). Springer
 :::
