--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ Click [here](/syllabus.pdf) for the most recent version.
 
 [Week 3: Classification](slides/week3.html)
 
-Week 4: Validation, selection, regularization
+[Week 4: Validation, selection, regularization](https://github.com/gustavo-diaz/ps490ml/blob/main/scripts/validation.qmd)
 
 Week 5: Tree-based methods
 
